working burger + mixes page created

--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title>RIQ</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <div class="homeMenu">
-        <a class="left-link" href="#">Beats</a>
-        <h1 id="title">RIQ.com</h1>
-        <a class="right-link" href="#">Mixes</a>
-      </div>
-      <input type="checkbox" id="menu-toggle" class="menu-toggle">
-      <label for="menu-toggle" class="menu">
-        <!-- This is the hamburger icon -->
-        <span class="hamburger"></span>
-      </label>
-      <nav>
-        <ul class="mainMenu">
-          <li><a href="#">Beats</a></li>
-          <li><a href="#">Mixes</a></li>
-          <li><a href="#">Samples</a></li>
-          <li><a href="#">Sessions</a></li>
-        </ul>
+    <header class="header">
+      <nav class="navbar">
+          <h1 class="brand-title">RIQ</h1>
+
+          <ul class="nav-menu">
+            <li><a class="nav-link" href="#">Beats</a></li>
+            <li><a class="nav-link" href="mixes.html">Mixes</a></li>
+            <li><a class="nav-link" href="#">Samples</a></li>
+            <li><a class="nav-link" href="#">Sessions</a></li>
+          </ul>
+          
+          <div class="hamburger" onclick="sideMenu();">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
       </nav>
     </header>
+    <script src="js/main.js"></script>
   </body>
 </html>
