homepage done + booking page created

--- a/index.html
+++ b/index.html
@@ -1,34 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <header class="header">
-      <nav class="navbar">
-          <h1 class="brand-title">RIQ</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible"
+  content="IE=edge">
+  <meta name="viewport" content="width=device-width,
+  initial-scale=1.0">
+  <link rel = "stylesheet" href = "css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <title>ProdbyRIQ Homepage</title>
+</head>
+<body>
+  <header>
+    <nav class="navbar">
+      <a href="#" class="logo">
+        <img src="images/logo3.png">
+      </a>
+      <ul class="navbar-list">
+        <li><a href="index.html" class="navbar-link">Home</a></li>
+        <li><a href="#beats" class="navbar-link">Beats</a></li>
+        <li><a href="bookings.html" class="navbar-link">Bookings</a></li>
+        <li><a href="#mixes" class="navbar-link">Mixes</a></li>
+      </ul>
+      <button class="reg">Sign In</button>
+    </nav>
+    <div id="scroll-container">
+      <div id="scroll-text">
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <span>MUSIC</span> 
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <span>MUSIC</span>
+        <div>
+    </div>
+  </header>
 
-          <ul class="nav-menu">
-            <li><a class="nav-link" href="#">Beats</a></li>
-            <li><a class="nav-link" href="mixes.html">Mixes</a></li>
-            <li><a class="nav-link" href="#">Samples</a></li>
-            <li><a class="nav-link" href="#">Sessions</a></li>
-          </ul>
-          
-          <div class="hamburger" onclick="sideMenu();">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-      </nav>
-    </header>
-    <script src="js/main.js"></script>
-  </body>
+  <!-- Banner -->
+  <section class="banner">
+    <div class="banner-text">
+      <h1>Book A Session Today!</h1>
+      <h4>Sessions are appointment only</h4>
+      <p>Try to arrive 15 minutes early so any problems can be avoided! </p>
+      There is a 50% non-refundable deposit when booking. This is not an additional charge and is included in the total price. In the unfortunate event you may not be able to attend and have to cancel, you will be refunded 50% of the total price.
+    </div>
+    <div class="card">
+      <h1>Select Appointment </h1>
+      <ul class="booking-list">
+        <li>
+          <a href="#" class="booking">1hr for $50</a>
+          <button class="book-button">Book</button>
+        </li>
+        <li>
+          <a href="#" class="booking">2hr for $100</a>
+          <button class="book-button">Book</button>
+        </li>
+        <li>
+          <a href="#" class="booking">3hr for $150</a>
+          <button class="book-button">Book</button>
+        </li>
+        <li>
+          <a href="#" class="booking">4hr for $200</a>
+          <button class="book-button">Book</button>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Follow 
+Social Media
+
+Contact 
+Email
+
+Location 
+TRC + Chicken room -->
+  
+</body>
+<footer>
+  <div class="follow">
+    <h2>Follow</h2>
+    <ul>
+      <li><a href="https://www.instagram.com/prodbyriq/?hl=en">Instagram</a></li>
+      <li><a>Tiktok</a></li>
+      <li><a href="https://soundcloud.com/prodbyriq">Soundcloud</a></li>
+      <li><a href="">Youtube</a></li>
+    </ul>
+      
+  </div>
+  <div class="contact">
+    <h2>Contact</h2>
+    <p>prodbyriq@gmail.com</p>
+  </div>
+  <div class="location">
+    <h2>Locations</h2>
+    <p>The Record Co - Mass Ave</p>
+    <p>The Chicken Room - Brighton</p>
+  </div>
+</footer>
 </html>
+
